# advent-of-code-2019

./: README.md  dune-project  package.json
esy.lock/: index.json
input/: Day1.txt  Day4.txt  Day7.txt
input/2/: input.txt
test/: Day1Test.re  Day2Test.re  Day3Test.re  Day4Test.re  Day5Test.re  Day6Test.re  Day7Test.re  Day8Test.re  Problem1Test.re  Problem2Test.re  Problem3Test.re  Problem4Test.re  Problem5Test.re  Problem6Test.re  dune
testExe/: dune
